Add main-app tag to index.html

--- a/client/index.html
+++ b/client/index.html
@@ -11,9 +11,9 @@
     <link rel="icon" href="favicon.jpg">
     <base href="/">
   </head>
-  <body>
+  <body ng-app="app" ng-strict-di ng-cloak> <!-- forces use of safe DI syntax -->
 
-    <h1>Hello Eggly ES6!</h1>
+    <main-app>Loading...</main-app>
 
     <script src="bundle.js"></script>
   </body>
