Add components and modules into root

--- a/client/app/app.html
+++ b/client/app/app.html
@@ -2,10 +2,11 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-3 col-md-2 sidebar">
-				<h1>Categories</h1>
+				<categories></categories>
 			</div>
 			<div class="col-sm-9 col-md-10 main">
 				<h1>Bookmarks</h1>
+				<p>Bacon ipsum dolor amet shank kevin corned beef chuck ham hock, ground round hamburger doner tenderloin jerky cow bresaola flank brisket. Fatback strip steak shoulder ground round turkey. Salami pork belly pork loin turkey kielbasa drumstick. Jerky chuck chicken, alcatra corned beef tail turducken frankfurter short loin venison bresaola. Jowl meatball bresaola capicola chicken kevin alcatra, tongue corned beef short loin cupim tri-tip landjaeger frankfurter. Bacon beef spare ribs, hamburger strip steak beef ribs salami bresaola turducken flank t-bone boudin fatback ham.</p>
 			</div>
 		</div>
 	</div>
