--- a/client/app/app.html
+++ b/client/app/app.html
@@ -2,7 +2,10 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-3 col-md-2 sidebar">
-				<categories></categories>
+				<button type="button"
+					class="btn btn-lg btn-outline-primary"
+					ng-click="isVisible = !isVisible">Toggle</button>
+				<categories ng-if="isVisible"></categories>
 			</div>
 			<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 				<h1>Bookmarks</h1>
